--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,48 @@
-/* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
- #map {
-    height: 100%;
-    
-  }
+/* Google Maps div */
+#map {
+  margin: auto;
+  margin-left: 10%;
+  height: 100%;
+  width: 50%;
+}
   
-  /* 
-   * Optional: Makes the sample page fill the window. 
-   */
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
+/* Normalize the body */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
+/* Styling for the search bar section */
+.search-bar {
+  margin-left: 10%;
+}
+
+/* Styling for the map and band display section */
+.main {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+}
+
+/* Styling for the band display card */
+.card {
+  width: 28%;
+  height: 80%;
+  padding: 5%;
+  margin-right: 10%;
+  text-align: center;
+}
+
+/* Center the band image and adjust the size */
+#artistImg {
+  margin: auto;
+  margin-left: 5%;
+  width: 80%;
+}
+
+/* Styling for the band name */
 h3 {
     margin-top: 25%;
 }
