--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,36 @@
 /* Google Maps div */
 #map {
   margin: auto;
+  margin-top: 0;
   margin-left: 10%;
-  height: 100%;
+  height: 80%;
   width: 50%;
+  border: 2px solid black;
+  border-radius: 15px 15px;
+  box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
 }
   
 /* Normalize the body */
 html,
 body {
+  font-family: 'Comfortaa', sans-serif;
+  color: white;
+  background-color: rgb(51, 51, 51);
   height: 100%;
   margin: 0;
   padding: 0;
 }
+
+/* Styling for the navbar */
+.navbar {
+  opacity: 90%;
+}
+
+/* Styling for the Hero */
+.hero {
+  letter-spacing: 2px;
+}
+
 
 /* Styling for the search bar section */
 .search-bar {
@@ -33,6 +51,10 @@ body {
   padding: 5%;
   margin-right: 10%;
   text-align: center;
+  color: white;
+  background-color: rgb(97, 97, 97);
+  border: 2px solid black;
+  box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
 }
 
 /* Center the band image and adjust the size */
@@ -40,6 +62,8 @@ body {
   margin: auto;
   margin-left: 5%;
   width: 80%;
+  border: 2px solid black;
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 /* Styling for the band name */
