--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ body {
 /* Styling for the Hero */
 .hero {
   letter-spacing: 2px;
+  background-image: url(../img/hero.jpg);
+  background-size: contain;
+  box-shadow: rgb(51, 51, 51) 0px -14px 14px -5px inset;
+  text-shadow: 2px 2px rgb(51, 51, 51);
 }
 
 
