--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body {
 
 /* Styling for the Hero */
 .hero {
+  position: relative;
   letter-spacing: 2px;
   background-image: url(../img/hero.jpg);
   background-size: contain;
@@ -49,6 +50,24 @@ body {
   text-shadow: 2px 2px rgb(51, 51, 51);
 }
 
+.hero-title {
+  position: relative;
+  z-index: 2;
+}
+
+.hero-text {
+  position: relative;
+  z-index: 2;
+}
+
+#hero-logo {
+  position: absolute;
+  opacity: 60%;
+  width: 30%;
+  bottom: 0;
+  left: 35%;
+  z-index: 1;
+}
 
 /* Styling for the search bar section */
 .search-bar {
