--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
   box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
 }
 
+.dark {
+  background-color: rgb(51, 51, 51);
+}
+
 /* Normalize the body */
 html,
 body {
