--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ body {
 /* Styling for the Hero */
 .hero {
   position: relative;
+  height: 55%;
   letter-spacing: 2px;
   background-image: url(../img/hero.jpg);
   background-size: contain;
@@ -59,11 +60,15 @@ body {
 
 .hero-title {
   position: relative;
+  font-size: 120px;
+  margin-top: 1%;
   z-index: 2;
 }
 
 .hero-text {
   position: relative;
+  top: 2%;
+  font-size: larger;
   z-index: 2;
 }
 
