Added some media queries. Positioning of the artist display card moves and hero text adjusts. Work still needed for very small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,10 +213,11 @@ h3 {
     margin: auto;
     margin-top: 2%;
     width: 60%;
-    height: 20%;
+    height: 30%;
     z-index: 2;
     padding: 0;
     text-align: left;
+    padding: 2%;
   }
 
   .card img {
@@ -229,8 +230,8 @@ h3 {
 
   #artistInfo {
     position: absolute;
-    width: 50%;
-    margin-left: 45%;
+    width: 45%;
+    margin-left: 40%;
   }
 
   /* Search button position */
