--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,6 +558,13 @@ h3 {
   }
 }
 
+@media only screen and (max-width: 360px) {
+.card {
+  top: auto;
+}
+}
+
+
 @media only screen and (max-width: 260px) {
   body {
     display: none;
